fix shot index trash flicker

--- a/static/css/partials/_theme.scss
+++ b/static/css/partials/_theme.scss
@@ -72,6 +72,12 @@
   &.transparent {
     background-color: transparent;
     color: $dark-default;
+
+    &:hover,
+    &:focus,
+    &:active {
+      background-color: rgba(0, 0, 0, 0.05);
+    }
   }
 
   &.warning {
